syntax = "proto3";

option go_package = "examples/rust-server-go-client/client/proto";
package greeter;

service GreeterService {
  rpc Greet(GreetingRequest) returns (GreetingResponse) {}
}

message GreetingRequest {
  string name = 1;
}

message GreetingResponse {
  string greeting = 1;
}
